-Djava.version=17
-Djava.specification.version=17
-Djava.runtime.version=17
-Djava.vm.specification.version=17
-DJAVA_VERSION=17
-DJDK_VERSION=17
-DJAVA_HOME=/usr/lib/jvm/java-17-openjdk
-Dmaven.compiler.source=17
-Dmaven.compiler.target=17
-Dmaven.compiler.release=17
-Dmaven.compiler.compilerVersion=17
-Dmaven.compiler.executable=javac
-Dmaven.compiler.fork=true
-Dmaven.compiler.verbose=true
-Dmaven.compiler.failOnError=true
-Dmaven.compiler.forceJavacCompilerUse=true
-Dmaven.compiler.testSource=17
-Dmaven.compiler.testTarget=17
-Dmaven.compiler.testRelease=17
-DcompilerVersion=17
-Dcompiler=javac
-Dfile.encoding=UTF-8
--illegal-access=permit
-Xmx1024m
-Xms512m
-XX:+UseG1GC